hphp/hack/test/typecheck/stdclass_final.php
<?hh // partial

class ThisAintJava extends stdClass {}
